--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
 * linguist-vendored
-*.html linguist-vendored=false
-*.css linguist-vendored=false
-*.js linguist-vendored=false
+*.php linguist-vendored=false
